Fix bug modal window be covered by modal background

--- a/app/webroot/css/coordinates_battle/battle.css
+++ b/app/webroot/css/coordinates_battle/battle.css
@@ -122,18 +122,7 @@ img#phototag0 {
     -o-transform: translate(-50%, 0);
     transform: translate(-50%, 0);
     display: none;
-    z-index: 4;
-}
-
-#modal_overlay {
-    z-index:3;
-    display:none;
-    position: fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background-color:rgba(0,0,0,0.5);
+    z-index: 999999;
 }
 
 #window_header {
